--- a/heap/templates/heap/base.html
+++ b/heap/templates/heap/base.html
@@ -22,7 +22,8 @@
                         <input type="text" placeholder=" Search..." style="height: 40px;" size="50">
            
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'tag_list' %}">Tags</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Users</a></li>
+                       
+                        <!--<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Users</a></li>-->
                        
                         {% if user.is_authenticated %}
                             <form method="post" action="{% url 'custom_logout' %}" style="margin-top: 1.2%;">
