--- a/heap/templates/heap/question_detail.html
+++ b/heap/templates/heap/question_detail.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    {% if request.user == post.author %}
+    {% if request.user == question.author %}
         <form action="{% url 'delete_post' question.id %}" method="post" style="display:inline;">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Delete</button>
