--- a/heap/templates/heap/question_detail.html
+++ b/heap/templates/heap/question_detail.html
@@ -13,10 +13,12 @@
         </div>
     </div>
 
+    <br>
+
     {% if request.user == question.author %}
         <form action="{% url 'delete_question' question.id %}" method="post" style="display:inline;">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Delete</button>
+        <button type="submit" class="btn btn-danger">Delete Post</button>
     </form>
     {% endif %}
 
