--- a/heap/templates/heap/base.html
+++ b/heap/templates/heap/base.html
@@ -19,8 +19,11 @@
                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                             <br>
-                        <input type="text" placeholder=" Search..." style="height: 40px;" size="50">
-           
+                       
+                        <form class="d-flex my-2 my-lg-0" role="search" style="flex: 1;">
+                            <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+                        </form>
+                       
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'tag_list' %}">Tags</a></li>
                        
                         <!--<li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Users</a></li>-->
