--- a/heap/templates/heap/question_detail.html
+++ b/heap/templates/heap/question_detail.html
@@ -17,10 +17,12 @@
 
     {% if request.user == question.author %}
         <form action="{% url 'delete_question' question.id %}" method="post" style="display:inline;">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Delete Post</button>
-    </form>
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Delete Post</button>
+        </form>
+        <a href="{% url 'edit_question' question.id %}" class="btn btn-secondary ml-2">Edit Post</a>
     {% endif %}
+
 
     <hr>
 
